--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <div class="ads-container" data-campaign-id="ad1"></div>
-    <script src="https://useroneman.github.io/adsinone/addasdata.js"></script>
+    <script src="https://useroneman.github.io/social-redirector-scripts/addasdata.js"></script>
   </body>
 </html>
