--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Display Ads</title>
   </head>
   <body>
-    <div class="ads-container" data-campaign-id="gif-txt-azd-Nitrosportal"></div>
+    <div class="ads-container" data-campaign-id="fb-prsnl-id"></div>
     <script src="https://useroneman.github.io/social-redirector-scripts/addasdata.js"></script>
   </body>
 </html>
